--- a/src/main/resources/static/js/app/admin/views/administracijaVrstaDokumenta.html
+++ b/src/main/resources/static/js/app/admin/views/administracijaVrstaDokumenta.html
@@ -3,7 +3,7 @@
         <md-toolbar class="md-table-toolbar md-default"
                     ng-hide="options.rowSelection && selected.length">
             <div class="md-toolbar-tools">
-                <h2 flex="">Vrste dokumenata</h2>
+                <h2 flex="" translate="TYPE_OF_DOCUMENTS">Vrste dokumenata</h2>
                 <md-button class="md-icon-button">
                     <ng-md-icon icon="add" ng-click="newDialog($event)"
                                 style="fill: black"></ng-md-icon>
@@ -20,13 +20,13 @@
             <div class="md-toolbar-tools">
                 <span flex="">{{selected.length}} {{selected.length > 1 ? 'items' : 'item'}} selected</span>
                 <md-button class="md-icon-button">
-                    <md-tooltip>Edit</md-tooltip>
+                    <md-tooltip><span translate="IZBOR.EDIT"> Edit</span></md-tooltip>
                     <ng-md-icon icon="edit"
                                 ng-click="editDialog($event)"
                                 style="fill: black"></ng-md-icon>
                 </md-button>
                 <md-button class="md-icon-button">
-                    <md-tooltip>Delete</md-tooltip>
+                    <md-tooltip><span translate="IZBOR.DELETE"> Delete</span></md-tooltip>
                     <ng-md-icon icon="delete"
                                 ng-click="deleteVrsteDokumenta()"
                                 style="fill: black"></ng-md-icon>
@@ -43,10 +43,10 @@
                 <thead ng-if="!options.decapitate" md-head
                        md-order="query.order" md-on-reorder="logOrder">
                 <tr md-row>
-                    <th md-column="">Naziv BA</th>
-                    <th md-column="">Naziv EN</th>
-                    <th md-column="">Template BA</th>
-                    <th md-column="">Template EN</th>
+                    <th md-column=""><span translate="TITLE_BA"> Naziv BA</span></th>
+                    <th md-column=""><span translate="TITLE_EN"> Naziv EN</span></th>
+                    <th md-column=""><span translate="TEMPLATE_BA"> Template BA</span></th>
+                    <th md-column=""><span translate="TEMPLATE_EN"> Template EN</span></th>
                     <!-- <th md-column>Dugmici</th> -->
                 </tr>
                 </thead>
